--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
               <li class="header__item">
                 <a href="#contacts" class="header__link link-reset" aria-label="Контакты">Контакты</a>
               </li>
-
+              <li class="header__item">
+                <a href="#contacts" class="header__link link-reset" aria-label="Контакты">Контакты</a>
+              </li>
             </ul>
           </nav>
           <button class="header__searth-btn btn" type="button" aria-label="Поиск">
