--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/media.css">
-  <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
-  <script src="js/inputmask.min.js"></script>
-  <script src="js/graph-modal.min.js"></script>
-  <script src="https://unpkg.com/simplebar@latest/dist/simplebar.min.js"></script>
-  <script src="js/accordion.min.js"></script>
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-  <script src="https://unpkg.com/@popperjs/core@2"></script>
-  <script src="https://unpkg.com/tippy.js@6"></script>
-  <script src="js/choices.min.js"></script>
+  <script defer src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
+  <script defer src="js/inputmask.min.js"></script>
+  <script defer src="js/graph-modal.min.js"></script>
+  <script defer src="https://unpkg.com/simplebar@latest/dist/simplebar.min.js"></script>
+  <script defer src="js/accordion.min.js"></script>
+  <script defer src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  <script defer src="https://unpkg.com/@popperjs/core@2"></script>
+  <script defer src="https://unpkg.com/tippy.js@6"></script>
+  <script defer src="js/choices.min.js"></script>
+  <script defer src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&mode=release&coordorder=latlong"></script>
+  <script defer src="js/main.js"></script>
 
 
 </head>
@@ -259,6 +261,12 @@
                   <li class="header__dropdown-item">
                     <a href="" class="header__item-link Picasso link-reset" aria-label="Пикассо">Пикассо</a>
                   </li>
+                  <li class="header__dropdown-item">
+                    <a href="" class="header__item-link Kandinsky link-reset" aria-label="Кандинский">Кандинский</a>
+                  </li>
+                  <li class="header__dropdown-item">
+                    <a href="" class="header__item-link Malevich link-reset" aria-label="Малевич">Малевич</a>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -281,6 +289,12 @@
                   </li>
                   <li class="header__dropdown-item">
                     <a href="" class="header__item-link Balla link-reset" aria-label="Балла">Балла</a>
+                  </li>
+                  <li class="header__dropdown-item">
+                    <a href="" class="header__item-link Carra link-reset" aria-label="Карра">Карра</a>
+                  </li>
+                  <li class="header__dropdown-item">
+                    <a href="" class="header__item-link Severini link-reset" aria-label="Северини">Северини</a>
                   </li>
                 </ul>
               </div>
@@ -1552,8 +1566,6 @@
       </ul>
     </div>
   </footer>
-  <script src="https://api-maps.yandex.ru/2.1/?apikey=&lang=ru_RU"></script>
-  <script src="js/script.js"></script>
 </body>
 
 </html>
